<resources>
    <string name="app_name">SMYM</string>
    <string name="splash_screen">SplashScreenActivity</string>

    <string name="MsgValidation">Please correct the errors</string>
    <string name="MsgCheckConnection">Please check internet connection</string>
    <string name="MsgInvalidUser">Your registration details has been \nsent to admin for approval.\n
                                    \n
                                    You will be able to login after \nadmin acceptance.\n
                                    \n
                                    We will notify you shortly.\n
                                    \n
                                    Thank you.</string>
    <string name="MsgNoRecordFound">There is no %s</string>
    <string name="MsgNoRecord">There is no record.</string>
    <string name="MsgSelectFail">Failed to select record</string>
    <string name="retry">Retry</string>
    <string name="title_activity_home">Home</string>
    <string name="title_fragment_change_password">Change Password</string>
    <string name="title_activity_notification">Notification</string>
    <string name="title_activity_detail">User Detail</string>
    <string name="notification">notification</string>

    <!--navigation drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_my_account">My Account</string>
    <string name="drawer_analysis">Analysis</string>
    <string name="drawer_events">Events</string>
    <string name="drawer_business">Business</string>
    <string name="drawer_offers">Offers</string>
    <string name="drawer_notification">Notification</string>
    <string name="drawer_rate_us">Rate Us</string>
    <string name="drawer_exit">Exit</string>
    <!--end-->

    <!--login detail-->
    <string name="siLoginFailedMsg">Username or Password are invalid.</string>
    <string name="siLoginDisable">User is disabled by administrator.</string>
    <string name="siLoginBlocked">User is blocked.</string>
    <string name="action_settings">Settings</string>
    <string name="user_text">User Name</string>
    <string name="siSignIn">Sign In</string>
    <string name="siLogout">Logout</string>
    <string name="siPassword">Password</string>
    <string name="siForgotPassword">Forgot Password?</string>
    <string name="clear_text">Clear Text</string>
    <string name="siLogIn">LogIn</string>
    <string name="siEmail">Email Address</string>
    <string name="member_login">Member Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--end-->

    <!-- signupActivity -->
    <string name="suAgree">By Signing up you will agree</string>
    <string name="suPrivacyPolicy">Privacy Policy</string>
    <string name="suAnd">and</string>
    <string name="suTerms">Terms of Service</string>
    <string name="suSignUp">Sign Up</string>
    <string name="suSignIn">Sign In</string>
    <string name="suAlreadyRegistered">Already Registered?</string>
    <string name="suFirstName">First Name</string>
    <string name="suValidEmail">Valid Email</string>
    <string name="suLastName">Last Name</string>
    <string name="suEmail">Email</string>
    <string name="suPhone">Mobile</string>
    <string name="suPassword">Password</string>
    <string name="suMale">Male</string>
    <string name="suFemale">Female</string>
    <string name="suGender">Gender</string>
    <string name="suBirthDate">Birth Date</string>
    <string name="suUpdate">Update Profile</string>
    <string name="suOffice">Office</string>
    <string name="suHome">Home</string>
    <string name="title_fragment_signup">Sign Up</string>
    <string name="title_fragment_registration">Personal Details</string>
    <string name="title_contact_fragment_registration">Contact Details</string>
    <string name="navSearch">Search</string>
    <string name="detail_approve">Approve</string>
    <string name="detail_decline">Decline</string>
    <string name="detail_share">Share</string>
    <string name="detail_change_password">Change Password</string>
    <string name="detail_save_contact">Save Contact</string>
    <!-- end -->

    <!--change password-->
    <string name="cpOldPassword">Old Password</string>
    <string name="cpNewPasssword">New Password</string>
    <string name="cpConfirmPassword">Confirm Password</string>
    <string name="cpChangePassword">Change Password</string>
    <string name="cpPasswordMisMatch">New and confirm password do not match</string>
    <!--end-->

    <string name="MsgOldPassword">Old password is not correct</string>
    <string name="MsgServerNotResponding">Connection failed, Try again</string>
    <string name="MsgUpdateFail">Failed to update record</string>
    <string name="MsgUpdatePassword">Password changed successfully</string>
    <string name="member_request">Memebr Request</string>

    <string name="notification_title">Notification</string>
    <string name="notification_add_title"> Send Notification</string>
    <string name="notification_list_fragment">Notification List</string>
    <string name="notification_add_fragment">Notification Add</string>
    <string name="advertisement_title">Advertisement</string>
    <string name="advertisement_add_title">Add Advertise</string>
    <string name="advertisement_update_title">Update Advertise</string>
    <string name="search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="drawer_advertisement">Advertisement</string>
    <string name="siNewUser">New User?</string>
    <string name="siSignupHere">Sign Up</string>
    <string name="upUpdateprofile">Update Profile</string>
    <string name="title_fragment_your_profile">My Profile</string>
    <string name="advertisement_add_fragment">Advertise Add</string>
    <string name="advertisement_list_fragment">Advertisement List</string>

    <string name="view_detail">View Detail</string>
    <string name="make_admin">Make Admin</string>
    <string name="remove_admin">Remove Admin</string>
    <string name="call">Call</string>
    <string name="delete_member">Delete Member</string>
    <string name="message">Message</string>
    <string name="email">Email</string>
    <string name="address">C-501 ArrayBit, Sapphire Business Hub, Near Trinnity Business Park, Opposite Green Arcade, L P Savani Road, Green City Rd, Adajan, Surat, Gujarat 395009</string>
    <string name="suConfirmPassword">Confirm Password</string>

    <string name="cdfConfirmMsg">Do you want to place order?</string>
    <string name="cdfCancel">Cancel</string>
    <string name="cdfConfirm">Confirm</string>
    <string name="cdfYes">Yes</string>
    <string name="cdfNo">No</string>
    <string name="cdfMsg">Your %s order will be ready on</string>
    <string name="cdfCancelMsg">Want to cancel %s?</string>
    <string name="action_disable">Disable</string>
    <string name="action_enable">Enable</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="member_filter">Filter</string>
    <string name="profession">Designation</string>
    <string name="qualification">Qualification</string>
    <string name="MsgNotApproved">%s is not approved member.</string>
    <string name="ok">Ok</string>
    <string name="directory_name_corp_chat">crop</string>
    <string name="directory_name_images">ad</string>
    <string name="add">Add</string>
    <string name="MsgMemberDecline">%s is declined.</string>
    <string name="drawer_generate_list">Export Members</string>

</resources>
