<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/viewDetail"
        android:orderInCategory="300"
        android:title="@string/view_detail"
        app:showAsAction="never" />

    <item
        android:id="@+id/admin"
        android:orderInCategory="400"
        android:title="@string/make_admin"
        app:showAsAction="never" />

    <item
        android:id="@+id/call"
        android:orderInCategory="500"
        android:title="@string/call"
        app:showAsAction="never" />

    <item
        android:id="@+id/message"
        android:orderInCategory="600"
        android:title="@string/message"
        app:showAsAction="never"/>

    <item
        android:id="@+id/email"
        android:orderInCategory="700"
        android:title="@string/email"
        app:showAsAction="never"/>
</menu>
