<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--<item-->
        <!--android:id="@+id/action_search"-->
        <!--android:icon="@drawable/search"-->
        <!--android:orderInCategory="200"-->
        <!--android:title="@string/search"-->
        <!--android:visible="false"-->
        <!--app:actionViewClass="android.support.v7.widget.SearchView"-->
        <!--app:showAsAction="always|collapseActionView"-->
        <!--tools:ignore="AlwaysShowAction" />-->

    <item
        android:id="@+id/memberFilter"
        android:icon="@drawable/filter"
        android:orderInCategory="300"
        android:title="@string/member_filter"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/memberRequest"
        android:icon="@drawable/member_request"
        android:orderInCategory="400"
        android:title="@string/member_request"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/notification"
        android:icon="@drawable/notification"
        android:orderInCategory="500"
        android:title="@string/drawer_notification"
        android:visible="false"
        app:showAsAction="always" />

</menu>
