<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signUpFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/offwhite"
    android:orientation="vertical"
    tools:context="com.arraybit.mym.RegistrationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/control_SpecingMedium">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/no_image"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/control_SpecingSmall"
                    android:orientation="vertical">

                    <com.rey.material.widget.EditText
                        android:id="@+id/etFirstName"
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/suFirstName"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName|textCapSentences"
                        app:et_supportMaxLines="1" />

                    <com.rey.material.widget.EditText
                        android:id="@+id/etLastName"
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/suLastName"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName|textCapSentences"
                        app:et_supportMaxLines="1" />

                </LinearLayout>

            </LinearLayout>

            <com.rey.material.widget.EditText
                android:id="@+id/etEmail"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/suEmail"
                android:imeOptions="actionNext"
                android:inputType="textWebEmailAddress|textCapSentences"
                app:et_supportMaxLines="1" />

            <com.rey.material.widget.EditText
                android:id="@+id/etPhone"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/suPhone"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="15"
                app:et_supportMaxLines="1" />

            <com.rey.material.widget.EditText
                android:id="@+id/etDateOfBirth"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/suBirthDate"
                android:imeOptions="actionNext"
                app:et_supportMaxLines="1" />

            <com.rey.material.widget.EditText
                android:id="@+id/etPassword"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/suPassword"
                android:imeOptions="actionNext"
                android:inputType="textWebPassword"
                app:et_supportMaxLines="1" />

            <com.rey.material.widget.EditText
                android:id="@+id/etConfirmPassword"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/suConfirmPassword"
                android:inputType="textWebPassword"
                app:et_supportMaxLines="1" />

            <RadioGroup
                android:id="@+id/rgMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbMale"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/suMale" />

                <RadioButton
                    android:id="@+id/rbFemale"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/control_SpecingMedium"
                    android:gravity="center"
                    android:text="@string/suFemale" />
            </RadioGroup>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:visibility="gone"
                android:orientation="horizontal">

                <com.rey.material.widget.TextView
                    style="@style/SecondaryTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/suAlreadyRegistered" />

                <com.rey.material.widget.CompoundButton
                    android:id="@+id/cbSignIn"
                    style="@style/CompoundButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/control_SpecingSmall"
                    android:text="@string/suSignIn"
                    android:textColor="@color/colorAccentDark" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <com.rey.material.widget.Button
        android:id="@+id/btnSignUp"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_Height"
        android:layout_marginTop="@dimen/control_SpecingSmall"
        android:layout_marginBottom="@dimen/control_SpecingTiny"
        android:text="Next" />
    </LinearLayout>
</LinearLayout>

