<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    tools:ignore="UseCompoundDrawables">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivErrorIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/invalid_user" />

        <com.rey.material.widget.TextView
            android:id="@+id/txtMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/control_SpecingSmall"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/MsgInvalidUser"
            android:textColor="@color/grey_600"
            android:textSize="@dimen/control_TextMedium" />

        <com.rey.material.widget.CompoundButton
            android:id="@+id/cbSignIn"
            style="@style/CompoundButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="@dimen/control_SpecingNormal"
            android:padding="@dimen/control_SpecingTiny"
            android:text="@string/suSignIn" />
    </LinearLayout>

</LinearLayout>
