<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signUpActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/offwhite"
    android:orientation="vertical"
    tools:context="com.arraybit.mym.RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar_layout" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/control_SpecingMedium"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivImage"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/no_image"
                        tools:ignore="ContentDescription" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/control_SpecingSmall"
                        android:orientation="vertical">

                        <com.rey.material.widget.EditText
                            android:id="@+id/etFirstName"
                            style="@style/EditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/suFirstName"
                            android:imeOptions="actionNext"
                            android:inputType="textPersonName|textCapSentences"
                            app:et_supportMaxLines="1" />

                        <com.rey.material.widget.EditText
                            android:id="@+id/etLastName"
                            style="@style/EditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/suLastName"
                            android:imeOptions="actionNext"
                            android:inputType="textPersonName|textCapSentences"
                            app:et_supportMaxLines="1" />

                    </LinearLayout>

                </LinearLayout>

                <com.rey.material.widget.EditText
                    android:id="@+id/etEmail"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/suEmail"
                    android:imeOptions="actionNext"
                    android:inputType="textWebEmailAddress"
                    app:et_supportMaxLines="1" />

                <com.rey.material.widget.EditText
                    android:id="@+id/etPhone"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Mobile1"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="14"
                    android:text="+91 "
                    app:et_supportMaxLines="1" />

                <com.rey.material.widget.EditText
                    android:id="@+id/etPhone1"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Mobile2"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="14"
                    android:text="+91 "
                    app:et_supportMaxLines="1" />

                <com.rey.material.widget.EditText
                    android:id="@+id/etDateOfBirth"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/suBirthDate"
                    android:imeOptions="actionNext"
                    app:et_supportMaxLines="1" />

                <com.rey.material.widget.EditText
                    android:id="@+id/etPassword"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/suPassword"
                    android:imeOptions="actionNext"
                    android:inputType="textWebPassword"
                    app:et_supportMaxLines="1" />

                <com.rey.material.widget.EditText
                    android:id="@+id/etConfirmPassword"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/suConfirmPassword"
                    android:inputType="textWebPassword"
                    app:et_supportMaxLines="1" />

                <RadioGroup
                    android:id="@+id/rgMain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbMale"
                        style="@style/RadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:gravity="center"
                        android:text="@string/suMale" />

                    <RadioButton
                        android:id="@+id/rbFemale"
                        style="@style/RadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/control_SpecingMedium"
                        android:gravity="center"
                        android:text="@string/suFemale" />
                </RadioGroup>

            </LinearLayout>

        </ScrollView>

        <com.rey.material.widget.Button
            android:id="@+id/btnSignUp"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_Height"
            android:layout_marginBottom="@dimen/control_SpecingTiny"
            android:layout_marginTop="@dimen/control_SpecingSmall"
            android:text="Next" />
    </LinearLayout>
</LinearLayout>

